--- a/views/404.html
+++ b/views/404.html
@@ -1,13 +1,8 @@
 <div class="container">
 	<div class="row">
-
-		<div class="panel panel-default">
-			<div class="panel-heading" ng-bind="lang.Not_found_title"></div>
-			<div class="panel-body text-center">
-				<h2 ng-bind="lang.Not_found_desc"></h2><br/>
-				<h4 ng-bind="lang.Not_found_desc_small"></h4>
-			</div>
+		<div class="col-12 text-center alert alert-danger" role="alert">
+			<h3 ng-bind="lang.Not_found_title"></h3>
+			<p ng-bind="lang.Not_found_desc"></p>
 		</div>
-
 	</div>
 </div>
