--- a/views/index.html
+++ b/views/index.html
@@ -1,27 +1,17 @@
 <div class="container" ng-controller="BoardListController">
 	<div class="row">
-		<div class="col-md-12 text-center">
+		<div class="col-12 text-center">
 			<h2 ng-bind="lang.Boards"></h2>
 			<h4 ng-bind="lang.Boards_desc"></h4>
 			<hr/>
 		</div>
-		<div class="col-md-6">
+		<div class="col-12">
 			<div class="list-group">
-				<a ng-repeat="board in firstList" href="#/board/{{board.prefix}}" class="list-group-item">
-				<span class="label pull-right" 
-				ng-class="board.tag === 'NSFW' ? 'label-danger' : 'label-success'" 
-				title="{{board.tag === 'NSFW' ? lang.NSFW : lang.SFW}}">{{board.tag}}</span>
-				{{board.name}}
-				</a>
-			</div>
-		</div>
-		<div class="col-md-6">
-			<div class="list-group">
-				<a ng-repeat="board in secondList" href="#/board/{{board.prefix}}" class="list-group-item">
-				<span class="label pull-right" 
-				ng-class="board.tag === 'NSFW' ? 'label-danger' : 'label-success'" 
-				title="{{board.tag === 'NSFW' ? lang.NSFW : lang.SFW}}">{{board.tag}}</span>
-				{{board.name}}
+				<a ng-repeat="board in boards" href="#/board/{{board.prefix}}"
+					class="list-group-item list-group-item-action">
+
+					<span class="badge" ng-class="board.tag === 'NSFW' ? 'badge-danger' : 'badge-success'">{{board.tag}}</span>
+					{{board.name}}
 				</a>
 			</div>
 		</div>
