--- a/views/admin/adminpanel.html
+++ b/views/admin/adminpanel.html
@@ -1,56 +1,58 @@
 <div class="container" ng-controller="AdminController">
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-12">
 			<h2 ng-bind="lang.Manage_Boards"></h2><hr/>
 			
-			<table class="table table-hover">
-				<thead>
-					<tr>
-						<th ng-bind="lang.Id"></th>
-						<th ng-bind="lang.Name"></th>
-						<th ng-bind="lang.Prefix"></th>
-						<th ng-bind="lang.Description"></th>
-						<th ng-bind="lang.Tag"></th>
-						<th ng-bind="lang.Delete_Or_Edit"></th>
-						<th ng-bing="lang.View"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr ng-repeat="board in boards track by $index">
-						<td ng-bind="board.id"></td>
-						<td ng-bind="board.name"></td>
-						<td ng-bind="board.prefix"></td>
-						<td ng-bind="board.description"></td>
-						<td ng-bind="board.tag"></td>
-						<td>
-							<button type="button" class="btn btn-danger btn-xs" ng-click="deleteBoard(board.id)" ng-bind="lang.Delete"></button>
-							<a href="#/adminpanel/edit/{{board.id}}/" class="btn btn-success btn-xs" ng-bind="lang.Edit"></a>
-						</td>
-						<td>
-							<a href="#/board/{{board.prefix}}/" class="btn btn-success btn-xs btn-block" ng-bind="lang.View"></a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+			<div class="table-responsive table-responsive-md table-responsive-sm">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th ng-bind="lang.Id"></th>
+							<th ng-bind="lang.Name"></th>
+							<th ng-bind="lang.Prefix"></th>
+							<th ng-bind="lang.Description"></th>
+							<th ng-bind="lang.Tag"></th>
+							<th ng-bind="lang.Delete_Edit_View"></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="board in boards track by $index">
+							<td ng-bind="board.id"></td>
+							<td ng-bind="board.name"></td>
+							<td ng-bind="board.prefix"></td>
+							<td ng-bind="board.description"></td>
+							<td ng-bind="board.tag"></td>
+							<td>
+								<div class="btn-group" role="group">
+									<button type="button" class="btn btn-danger" ng-bind="lang.Delete" ng-click="deleteBoard(board.id)"></button>
+									<a href="#/adminpanel/edit/{{board.id}}/" class="btn btn-primary" ng-bind="lang.Edit"></a>
+									<a href="#/board/{{board.prefix}}/" class="btn btn-success" ng-bind="lang.View"></a>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
-		<div class="col-md-12">
+
+		<div class="col-12">
 			<h2 ng-bind="lang.Create_Boards"></h2><hr/>
 			<form>
 				<div class="form-group" ng-class="nameEmpty === true ? 'has-error' : ''">
 					<label for="name" ng-bind="lang.Name"></label>
-					<input type="text" class="form-control" id="name" ng-model="name" placeholder="{{ lang.Name_for_board }}">
+					<input type="text" class="form-control" id="name" ng-model="name" placeholder="{{ lang.Name_for_board }}" required>
 				</div>
 				<div class="form-group" ng-class="prefixEmpty === true ? 'has-error' : ''">
 					<label for="prefix" ng-bind="lang.Prefix"></label>
-					<input type="text" class="form-control" id="prefix" ng-model="prefix" placeholder="{{ lang.Prefix_for_board }}">
+					<input type="text" class="form-control" id="prefix" ng-model="prefix" placeholder="{{ lang.Prefix_for_board }}" required>
 				</div>
 				<div class="form-group" ng-class="descEmpty === true ? 'has-error' : ''">
 					<label for="desc" ng-bind="lang.Description"></label>
-					<input type="text" class="form-control" id="desc" ng-model="desc" placeholder="{{ lang.Desc_for_board }}">
+					<input type="text" class="form-control" id="desc" ng-model="desc" placeholder="{{ lang.Desc_for_board }}" required>
 				</div>
 				<div class="form-group" ng-class="tagEmpty === true ? 'has-error' : ''">
 					<label for="tag">Tag</label>
-					<select ng-model="tag" id="tag" class="form-control">
+					<select ng-model="tag" id="tag" class="form-control" required>
 						<option value="NSFW" ng-bind="lang.NSFW"></option>
 						<option value="SFW" ng-bind="lang.SFW"></option>
 					</select>
