--- a/views/error.html
+++ b/views/error.html
@@ -1,8 +1,6 @@
 <div class="container">
-	<div class="container">
-		<div class="col-md-12 text-center">
-			<h2>Important application files missing.</h2>
-			<p>Please, backup your database, and reinstall BoardLite. <a href="https://github.com/jokkeez/boardlite">Install.</a></p>
-		</div>
+	<div class="col-12 text-center alert alert-danger" role="alert">
+		<h2>Important application files missing.</h2>
+		<p>Please, backup your database and reinstall BoardLite from <a href="https://github.com/jokkeez/boardlite">here.</a></p>
 	</div>
 </div>
