A lot of refactoring and few bug fixes.

--- a/views/404.html
+++ b/views/404.html
@@ -1,8 +1,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-12 text-center alert alert-danger" role="alert">
-			<h3 ng-bind="lang.Not_found_title"></h3>
-			<p ng-bind="lang.Not_found_desc"></p>
+			<h3>{{lang.Not_found_title}}</h3>
+			<p class="lead">{{lang.Not_found_desc}}</p>
 		</div>
 	</div>
 </div>
