--- a/views/error.html
+++ b/views/error.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="col-12 text-center alert alert-danger" role="alert">
-		<h2>Important application files missing.</h2>
-		<p>Please, backup your database and reinstall BoardLite from <a href="https://github.com/jokkeez/boardlite">here.</a></p>
+		<h2>{{lang.Important_Files_Missing}}</h2>
+		<p>{{Backup_Files_Plz}} <a href="https://github.com/jokkeez/boardlite">{{lang.Here}}.</a></p>
 	</div>
 </div>
