--- a/assets/css/boardlite.css
+++ b/assets/css/boardlite.css
@@ -1,3 +1,12 @@
+html {
+	min-height: 100%;
+	position: relative;
+}
+
+body {
+	margin-bottom: 60px;
+}
+
 .hover-text {
 	color: black;
 	background-color: black;
@@ -19,7 +28,7 @@
 
 .card {
 	background-color: #e9ecef;
-	border-radius: 0%;
+	border-radius: 0;
 }
 
 a:hover {
@@ -27,7 +36,7 @@ a:hover {
 }
 
 .list-group-item {
-	border-radius: 0% !important;
+	border-radius: 0 !important;
 }
 
 .row {
@@ -35,14 +44,29 @@ a:hover {
 }
 
 textarea.form-control {
-	border-radius: 0%;
+	border-radius: 0;
 	min-height: 50px;
 }
 
 input.form-control {
-	border-radius: 0%;
+	border-radius: 0;
 }
 
-.navbar {
-	min-height: 20px;
+select.form-control {
+	border-radius: 0;
+}
+
+.footer {
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	height: 60px;
+	line-height: 60px;
+	padding-top: 2%;
+}
+
+.install-header {
+	background-color: #22282e;
+	color: #FDFDFD;
+	border-radius: 0;
 }
