--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,13 @@
 <div class="container" ng-controller="BoardListController">
 	<div class="row">
 		<div class="col-12 text-center">
-			<h2 ng-bind="lang.Boards"></h2>
-			<h4 ng-bind="lang.Boards_desc"></h4>
+			<h2>{{lang.Boards}}</h2>
+			<h4 class="lead">{{lang.Boards_desc}}</h4>
 			<hr/>
 		</div>
 		<div class="col-12">
 			<div class="list-group">
-				<a ng-repeat="board in boards" href="#/board/{{board.prefix}}"
+				<a ng-repeat="board in boards track by $index" href="#/board/{{board.prefix}}"
 					class="list-group-item list-group-item-action">
 
 					<span class="badge" ng-class="board.tag === 'NSFW' ? 'badge-danger' : 'badge-success'">{{board.tag}}</span>
