--- a/views/login.html
+++ b/views/login.html
@@ -2,27 +2,27 @@
 	<div class="row">
 	
 		<div class="col-12" ng-hide="success === undefined">
-			<div class="alert alert-danger fade show" role="alert" ng-bind="lang.Login_error"></div>
+			<div class="alert alert-danger fade show" role="alert">{{lang.Login_error}}</div>
 		</div>
 		
 		<div class="col-12">
 			<div class="card">
-				<div class="card-header" ng-bind="lang.Login"></div>
+				<div class="card-header">{{lang.Login}}</div>
 
 				<div class="card-body">
-					<form>
-						<div class="form-group" ng-class="nameEmpty === true ? 'has-error' : ''">
-							<label for="name" ng-bind="lang.Username"></label>
+					<form ng-submit="loginUser(data)">
+						<div class="form-group">
+							<label for="name">{{lang.Username}}</label>
 							<input type="text" id="name" name="name" ng-model="data.name" class="form-control" placeholder="{{lang.Username}}" required>
 						</div>
 
-						<div class="form-group" ng-class="passEmpty === true ? 'has-error' : ''">
-							<label for="pass" ng-bind="lang.Password"></label>
+						<div class="form-group">
+							<label for="pass">{{lang.Password}}</label>
 							<input type="password" id="pass" name="pass" ng-model="data.pass" class="form-control" placeholder="{{lang.Password}}" required>
 						</div>
 
 						<div class="form-group">
-							<button type="submit" ng-click="loginUser(data)" class="btn btn-primary" ng-bind="lang.Login"></button>
+							<button type="submit" class="btn btn-primary">{{lang.Login}}</button>
 						</div>
 					</form>
 				</div>
