--- a/views/rules.html
+++ b/views/rules.html
@@ -2,16 +2,16 @@
 	<div class="row">
 		
 		<div class="col-12 text-center">
-			<h2 ng-bind="lang.Rules"></h2>
-			<h4 ng-bind="lang.Rules_desc"></h4>
-			<h6 ng-bind="lang.Rules_desc_small"></h6>
+			<h2>{{lang.Rules}}</h2>
+			<h4 class="lead">{{lang.Rules_desc}}</h4>
+			<h6>{{lang.Rules_desc_small}}</h6>
 			<hr/>
 		</div>
 
 		<div class="col-12">
-			<div class="list-group">
+			<ul class="list-group">
 				<li class="list-group-item" ng-repeat="rule in rules track by $index">{{$index}}. {{rule}}</li>
-			</div>
+			</ul>
 		</div>
 	</div>
 </div>
